--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+libs/
+src/main/java/com/coolweather/android/gson/
+src/main/java/com/coolweather/android/service/
+src/main/res/drawable/
