--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.coolweather.android">
+    package="com.hya.weather">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -23,6 +23,9 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="5gRAK5TY9r4NtclvTwWe7XlmceNql5ct" />
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="c9f90ec5067dec9ad3a6b656caf2d7df">
+
+        </meta-data>
 
         <activity android:name=".MainActivity">
 
@@ -43,10 +46,7 @@
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":remote" />
-        <service
-            android:name=".service.LocationService"
-            android:enabled="true"
-            android:exported="true"></service>
+        <service android:name="com.amap.api.location.APSService"></service>
     </application>
 
 </manifest>
